--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -9,11 +9,11 @@
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
   max-width: 100%;
-  -webkit-animation-delay: 0.15s;
+  //-webkit-animation-delay: 0.15s;
   animation-delay: 0.15s;
 
   @include breakpoint($x-large) {
-    max-width: $max-width;
+    //max-width: $max-width;
   }
 }
 
