--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -173,3 +173,9 @@ $navicon-width: 1.5rem !default;
 $navicon-height: 0.25rem !default;
 $global-transition: all 0.2s ease-in-out !default;
 $intro-transition: intro 0.3s both !default;
+
+/* Code */
+
+$body-font-family: 'D2Coding', system-ui, -apple-system !default;
+$header-font-family: 'D2Coding', system-ui, -apple-system !default;
+$code-font-family: 'D2Coding', monospace !default;
