--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -28,6 +28,13 @@ body {
           flex-direction: column;
 }
 
+video {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 2rem auto;
+}
+
 .initial-content,
 .search-content {
   flex: 1 0 auto;
@@ -544,6 +551,12 @@ body {
   text-transform: uppercase;
 }
 
+video {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 2rem auto;
+}
 /*
    Wide Pages
    ========================================================================== */
